fixing overflow

--- a/src/app/all-events/all-events.component.css
+++ b/src/app/all-events/all-events.component.css
@@ -39,6 +39,10 @@ button:focus{
 td{
   padding-right: 30px;
   border-radius: 11px 0 0 11px;
+  width: 100%;
+}
+table {
+  display: flex;
 }
 table tr {
   display: flex;
